--- a/public/global.css
+++ b/public/global.css
@@ -1,12 +1,15 @@
-html, body {
+html,
+body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	margin: 0;
 }
+
 :root {
-	--main-color:#ff3e00;
-	--main-color-light:#ff7243;
-	--border-sudoku--cell-size:1px;
+	--main-color: #ff3e00;
+	--main-color-light: #ff7243;
+	--border-sudoku--cell-size: 1px;
 }
 
 @media print {
@@ -18,14 +21,12 @@ html, body {
 
 body {
 	color: #333;
-	margin: 0;
-	padding: 8px;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 a {
-	color: rgb(0,100,200);
+	color: rgb(0, 100, 200);
 	text-decoration: none;
 }
 
@@ -34,19 +35,17 @@ a:hover {
 }
 
 a:visited {
-	color: rgb(0,80,160);
+	color: rgb(0, 80, 160);
 }
 
 label {
 	display: block;
 }
 
-input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
-	-webkit-padding: 0.4em 0;
-	padding: 0.4em;
-	margin: 0 0 0.5em 0;
+input,
+button,
+select,
+textarea {
 	box-sizing: border-box;
 	border: 1px solid #ccc;
 	border-radius: 2px;
@@ -76,10 +75,11 @@ button:focus {
 
 
 @media print {
-	.no-printme  {
+	.no-printme {
 		display: none;
 	}
-	.printme  {
+
+	.printme {
 		display: block;
 	}
 }
